tests/ui/fips_keygen_secret_share_no_debug.stderr
error[E0277]: `FipsModuleSecretShare65` doesn't implement `Debug`
  --> tests/ui/fips_keygen_secret_share_no_debug.rs:13:15
   |
13 |     println!("{local:?}");
   |               ^^^^^^^^^ `FipsModuleSecretShare65` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = help: the trait `Debug` is not implemented for `FipsModuleSecretShare65`
